# DarkMagician

./: .editorconfig  .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  .travis.yml  README.md  lerna.json  ormconfig.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.bin/hooks/: pre-commit  pre-push
.bin/scripts/: init.sh
.bin/scripts/database/: perms.sh  tables.sh
.bin/scripts/db/: perms.sh  tables.sh
.bin/scripts/storage/: init.sh  main.sh  perms.sh
.bin/scripts/storage/db/: mg_main.sh  mg_raw.sh
.bin/scripts/storage/tables/: mg_main.sh  mg_raw.sh
.github/workflows/: node.js.yml  rust.yml  standard.yml  standard_flow.yml
api/: Cargo.toml
api/cards/: Cargo.toml
api/cards/src/: construct.rs  lib.rs  payload.rs  utils.rs
api/cards/src/http/: mod.rs  structure.rs
api/cards/src/storage/: mod.rs  models.rs  schema.rs
api/decks/: Cargo.toml
api/decks/src/: lib.rs  payload.rs
api/decks/src/storage/: mod.rs  models.rs  schema.rs
api/relay/: Cargo.toml
api/relay/src/: loadable.rs  main.rs
app/: eslintrc.json  lerna.json  package-lock.json  package.json  tsconfig.json
app/bot/: package-lock.json  package.json
app/bot/src/: index.ts
app/bot/src/commands/: info.ts  ping.ts
app/config/: default.ts
apps/magician/: \  package-lock.json  package.json  tsconfig.json
apps/magician/config/: default.ts  default.yml  development.ts
apps/magician/src/: index.ts
apps/magician/src/commands/: ping.ts  search.ts
apps/magician/src/magician/: index.ts
apps/magician/src/services/: endpoint.ts  parsed-cards.ts  players.ts
apps/magician/src/test-cmds/: ping.ts
db/: init.sh
db/tables/: cards.sh  dash.sh  decks.sh
modules/cache/: package-lock.json  package.json
modules/cache/lib/: index.ts  utils.ts
modules/card-database/: .npmignore  package-lock.json  package.json  tsconfig.json
modules/card-database/__tests__/: fetch.test.js  fetch.test.ts  rest.test.ts
modules/card-database/lib/: cdb.types.ts  index.ts  utils.ts
modules/card-database/lib/@types/: index.d.ts
modules/card-database/lib/entities/: Card.entity.ts  Market.entity.ts
modules/card-database/lib/modules/: ygoapi.ts
modules/card-database/lib/rest/: index.ts  types.ts
modules/commons/: .npmignore  package-lock.json  package.json
modules/commons/__tests__/: file-manager.test.ts
modules/commons/lib/: logger.ts
modules/commons/lib/file-manager/: index.ts  utils.ts
services/: .gitignore
services/cards/: Cargo.toml
services/cards-db/: Cargo.toml
services/cards-db/src/: construct.rs  main.rs
services/cards-db/src/construct/: constants.rs  mod.rs  service.rs
services/cards-db/src/http/: mod.rs  raw.rs
services/cards-db/src/storage/: mod.rs  models.rs  schema.rs
services/cards/booster_packs/: ent_code.json  rotd.json
services/cards/src/: main.rs
services/cards/src/boosters/: mod.rs
services/cards/src/fetch/: mod.rs  tests.rs
services/cards/src/parser/: mod.rs
services/cards/src/server/: macros.rs  mod.rs
services/cards/src/server/tests/: mod.rs
services/db-import/: README.md  main.py  requirements.txt
services/dmg-battle/: Cargo.toml  README.md
services/dmg-img/: .gitignore  Cargo.toml  Dockerfile  README.md
services/dmg-img/src/: main.rs
services/gateway/src/: main.rs
services/gateway/src/storage/: mod.rs  models.rs
services/image-manipulation/: .gitignore  Cargo.toml  Dockerfile
services/image-manipulation/imgm/: Cargo.toml
services/image-manipulation/imgm-imgs/: Cargo.toml
services/image-manipulation/imgm-proto/: Cargo.toml
services/players/: Cargo.toml
services/players/src/: construct.rs  main.rs
services/players/src/storage/: mod.rs  schema.rs
services/ygo-cardy/: .gitignore  Cargo.toml  README.md
services/ygo-cardy/cardy/: Cargo.toml
services/ygo-cardy/cardy-fetch/: Cargo.toml
services/ygo-cardy/cardy-fetch/src/: lib.rs  ygopro.rs
services/ygo-cardy/cardy-logg/: Cargo.toml
services/ygo-cardy/cardy-parser/: Cargo.toml
services/ygodb/: .gitignore  Cargo.toml
services/ygodb/src/: construct.rs  main.rs
services/ygodb/src/http/: mod.rs  raw.rs
services/ygodb/src/storage/: mod.rs  models.rs  schema.rs
(+2 files in other folders)
