[package]
name = "cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
knil = "0.1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
ureq = { version = "2.5.0", features = ["json"] }
diesel = { version = "2.0.*", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
