[package]
name = "decks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrets-to-env = "0.1.0"
diesel = { version = "2.0.*", features = ["postgres", "r2d2"] }

[dev-dependencies]
dotenv = "0.15.0"
