[package]
name = "decks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrets-to-env = "0.1.0"
diesel = { version = "2.0.*", features = ["postgres", "r2d2"] }
log = "0.4"
knil = "0.1"
rand = "0.8"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
