[package]
name = "cards-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
uuid = { version = "1.1.2", features = ["v4"] }
ureq = { version = "2.4.0", features = [ "json" ] }
serde = { version = "1", features = ["derive"] }
diesel = { version = "1", features = ["postgres", "r2d2"] }
async-std = { version = "1.11.0", features = ["attributes"] }
secrets-to-env = "0.1.0"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "*"
