[package]
name = "cardy-fetch"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
description = "fetch cards from ygopro api"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"

[dependencies.ureq]
version = "1.4.0"
features = ["json"]

[dependencies.serde]
verison = "1"
features = ["derive"]
